--- a/provas/p1_2025.1/css/style.css
+++ b/provas/p1_2025.1/css/style.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     padding: 0;
     box-sizing: border-box;
+    margin: 0;
 }
 
 header {
@@ -80,6 +81,7 @@ nav a {
     background-color: orange;
     clip-path: polygon(0 0, 50% 0, 100% 50%, 50% 100%, 0 100%);
     transform: rotate(-45deg);
+    font-size: small;
 }
 
 .produtos-card__preco-container {
@@ -116,4 +118,11 @@ footer {
     position: sticky;
     bottom: 0;
     width: 100%;
+}
+
+.pagamento-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 0px 0px 50px 8px;
 }
