--- a/roteiros/roteiro_6/css/estilo.css
+++ b/roteiros/roteiro_6/css/estilo.css
@@ -59,6 +59,10 @@ main {
     border-bottom-width: medium;
 }
 
+.book:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 .book h3 {
     margin-top: 0;
 }
